[package]
name = "wasmcolors"
version = "0.1.0"
authors = ["Erik Golinelli <erik@codekraft.it>"]
edition = "2018"
description = "Color name to RGB conversion"
license = "MIT"
repository = "https://github.com/erikyo/wasmcolors"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.89", features = ["serde-serialize"] }
js-sys = "0.3.66"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
serde-wasm-bindgen = "0.6.3"
regex = "1.5"
color-name = "1.1.0"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
